test/runnable/extra-files/minimal/object.d
module object;

extern(C) void _Dmain() @system;

extern(C) void main()
{
    _Dmain();
}
