test/fail_compilation/fail326.d

@safe class C
{
    void foo();
}

class D : C
{
    void foo();
}


